Add behaviors, correct description in the overview.

--- a/src/overview.html
+++ b/src/overview.html
@@ -3,14 +3,14 @@
 	<require from="./semantic-prism-theme.css"></require>
 
 	<div class="ui centered text container">
-		<h1 class="ui header">Aurelia Semantic UI</h1>
+		<h1 ui-header>Aurelia Semantic UI</h1>
 
 		<p>A collection of <a href="http://semantic-ui.com/">Semantic UI</a> 
-			custom elements for Aurelia applications.</p>
+			custom attributes for Aurelia applications.</p>
 
 		<section>
 			<header>
-				<h2 class="ui header">Overview</h2>
+				<h2 ui-header>Overview</h2>
 			</header>
 
 			<p>In your project install the plugin via <kbd>jspm</kbd> with following command</p>
