Use ui-header and ui-container

--- a/src/modules/elements.html
+++ b/src/modules/elements.html
@@ -5,7 +5,7 @@
 	
 	<div class="ui centered container">
 		<header>
-			<h2 class="ui header">"Element" Widgets</h2>
+			<h2 ui-header>"Element" Widgets</h2>
 		</header>
 
 		<p>These are custom attributes that correspond to the "Elements" section of the Semantic
@@ -232,7 +232,7 @@
 			</div>
 
 			<div class="element-examples">
-				<h3 class="ui header">Examples</h3>
+				<h3 ui-header>Examples</h3>
 				
 				<element-example language="markup" caption="Page headers">
 				<div ui-segment class="vertical">
@@ -312,7 +312,7 @@
 			</div>
 
 			<div class="element-examples">
-				<h3 class="ui header">Examples</h3>
+				<h3 ui-header>Examples</h3>
 
 				<element-example language="markup">
 					<i ui-icon="name: right chevron"></i>
@@ -587,7 +587,7 @@
 
 
 			<div class="element-examples">
-				<h3 class="ui header">Examples</h3>
+				<h3 ui-header>Examples</h3>
 
 				<element-example language="markup" caption="The basic list type">
 				<div ui-list>
