--- a/src/modules/modules.html
+++ b/src/modules/modules.html
@@ -5,7 +5,7 @@
 
 	<main class="ui centered container">
 		<header>
-			<h2 class="ui header">"Module" Widgets</h2>
+			<h2 ui-header>"Module" Widgets</h2>
 		</header>
 
 		<p>These are custom attributes that correspond to the "Modules" section of the Semantic
@@ -47,7 +47,7 @@
 				<p>The <code>ui-dropdown</code> attribute corresponds to the Dropdown
 					Semantic element.</p>
 
-				<h3 class="ui header">To-Do List</h3>
+				<h3 ui-header>To-Do List</h3>
 				<ul ui-list>
 					<li>Make <code>selection</code> dropdown manage the hidden field and expose 
 						the value so it can be two-way bound</li>
