--- a/src/modules/modules.html
+++ b/src/modules/modules.html
@@ -15,9 +15,54 @@
 			name="accordion"
 			category="module"
 			description="">
+
 			<div class="element-docs">
 				<p>The <code>ui-accordion</code> attribute corresponds to the Accordion Semantic element.</p>
 			</div>
+
+			<div class="element-examples">
+
+				<element-example language="markup" caption="">
+				<div ui-accordion class="styled">
+					<div class="title">
+						<i ui-icon="name: dropdown"></i>
+						What is a dog?
+					</div>
+					<div class="content">
+						<p>A dog is a type of domesticated 
+							animal. Known for its loyalty and faithfulness, it can be
+							found as a welcome guest in many households across the 
+							world.</p>
+					</div>
+					<div class="title">
+						<i ui-icon="name: dropdown"></i>
+						What kinds of dogs are there?
+					</div>
+					<div class="content">
+						<p>There are many breeds of dogs. Each breed varies in size
+							and temperament. Owners often select a breed of dog that
+							they find to be compatible with their own lifestyle and
+							desires from a companion.</p>
+					</div>
+					<div class="title">
+						<i ui-icon="name: dropdown"></i>
+						How do you acquire a dog?
+					</div>
+					<div class="content">
+						<p>Three common ways for a prospective owner to acquire a
+							dog is from pet shops, private owners, or shelters.</p>
+						<p>A pet shop may be the most convenient way to buy a dog.
+							Buying a dog from a private owner allows you to assess
+							the pedigree and upbringing of your dog before choosing
+							to take it home. Lastly, finding your dog from a shelter,
+							helps give a good home to a dog who may not find one so
+							readily.</p>
+					</div>
+				</div>
+				</element-example>
+
+			</div>
+
 		</element-section>
 		
 		<element-section
@@ -61,7 +106,7 @@
 
 				<element-example language="markup" caption="Selection dropdown">
 				<div ui-dropdown="selection: gender">
-					<i class="dropdown icon"></i>
+					<i ui-icon="name: dropdown"></i>
 					<input type="hidden" value.bind="gender">
 					<div class="default text">Gender</div>
 					<div class="menu">
@@ -87,7 +132,7 @@
 
 				<element-example language="markup" caption="Bindable states">
 				<div ui-dropdown="selection: gender; loading.bind: isLoading; error.bind: errorMessage; disabled.bind: isDisabled">
-					<i class="dropdown icon"></i>
+					<i ui-icon="name: dropdown"></i>
 					<div class="default text">Gender</div>
 					<div class="menu">
 						<div class="ui error message">
