Update with example elements

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,6 @@
 <template>
 
+	<require from="semantic-ui/semantic.css"></require>
 	<require from="./app.css"></require>
 	<require from="./demo-nav"></require>
 	<require from="./demo-footer"></require>
