--- a/src/modules/elements.html
+++ b/src/modules/elements.html
@@ -141,7 +141,7 @@
 			description="A container limits content to a maximum width">
 
 			<div class="element-docs">
-				<p>The <code>ui-container</code> attribute corresponds to the Container
+				<p>The <code>ui-container</code> element/attribute corresponds to the Container
 					Semantic element.</p>
 			</div>
 
@@ -154,7 +154,7 @@
 			description="A divider visually segments content into groups">
 
 			<div class="element-docs">
-				<p>The <code>ui-divider</code> attribute corresponds to the Divider
+				<p>The <code>ui-divider</code> element/attribute corresponds to the Divider
 					Semantic element.</p>
 			</div>
 
@@ -214,7 +214,7 @@
 			description="A flag is is used to represent a political state">
 
 			<div class="element-docs">
-				<p>The <code>ui-flag</code> attribute corresponds to the Flag Semantic element.</p>
+				<p>The <code>ui-flag</code> element/attribute corresponds to the Flag Semantic element.</p>
 			</div>
 
 
@@ -240,7 +240,7 @@
 			description="A header provides a short summary of content">
 
 			<div class="element-docs">
-				<p>The <code>ui-header</code> attribute corresponds to the "content"-type Header
+				<p>The <code>ui-header</code> element/attribute corresponds to the "content"-type Header
 				Semantic element.</p>
 			</div>
 
@@ -314,7 +314,7 @@
 			description="An icon is a glyph used to represent something else">
 
 			<div class="element-docs">
-				<p>The <code>ui-icon</code> attribute corresponds to the Icon Semantic element.</p>
+				<p>The <code>ui-icon</code> element/attribute corresponds to the Icon Semantic element.</p>
 
 				<ul ui-list>
 					<li>Groups supported with the <code>ui-icons</code> attribute</li>
@@ -393,7 +393,7 @@
 			description="An image is a graphic representation of something">
 
 			<div class="element-docs">
-				<p>The <code>ui-image</code> attribute corresponds to the Image Semantic
+				<p>The <code>ui-image</code> element/attribute corresponds to the Image Semantic
 					element.</p>
 
 				<ul ui-list>
@@ -448,7 +448,7 @@
 			description="An input is a field used to elicit a response from a user">
 
 			<div class="element-docs">
-				<p>The <code>ui-input</code> attribute corresponds to the Input Semantic
+				<p>The <code>ui-input</code> element/attribute corresponds to the Input Semantic
 					element.</p>
 			</div>
 
@@ -527,7 +527,7 @@
 			description="A label displays content classification">
 
 			<div class="element-docs">
-				<p>The <code>ui-label</code> attribute corresponds to the Label Semantic
+				<p>The <code>ui-label</code> element/attribute corresponds to the Label Semantic
 					element.</p>
 
 				<ul ui-list>
@@ -590,7 +590,7 @@
 			description="A list is used to group related content">
 
 			<div class="element-docs">
-				<p>The <code>ui-list</code> attribute corresponds to the List Semantic
+				<p>The <code>ui-list</code> element/attribute corresponds to the List Semantic
 					element.</p>
 					
 				<ul ui-list>
@@ -675,7 +675,7 @@
 			description="A loader alerts a user to wait for an activity to complete">
 
 			<div class="element-docs">
-				<p>The <code>ui-loader</code> attribute corresponds to the Loader
+				<p>The <code>ui-loader</code> element/attribute corresponds to the Loader
 					Semantic element.</p>
 			</div>
 			
@@ -709,7 +709,7 @@
 				of the main view of a site">
 
 			<div class="element-docs">
-				<p>The <code>ui-rail</code> attribute corresponds to the Rail
+				<p>The <code>ui-rail</code> element/attribute corresponds to the Rail
 					Semantic element.</p>
 			</div>
 			
@@ -740,7 +740,7 @@
 				when activated">
 
 			<div class="element-docs">
-				<p>The <code>ui-reveal</code> attribute corresponds to the Reveal
+				<p>The <code>ui-reveal</code> element/attribute corresponds to the Reveal
 					Semantic element.</p>
 
 				<ul ui-list>
@@ -827,7 +827,7 @@
 			description="A segment is used to create a grouping of related content">
 
 			<div class="element-docs">
-				<p>The <code>ui-segment</code> attribute corresponds to the Segment
+				<p>The <code>ui-segment</code> element/attribute corresponds to the Segment
 					Semantic element.</p>
 
 				<p>You can put segments in groups by wrapping them in a block-level element
@@ -880,7 +880,7 @@
 			description="A step shows the completion status of an activity in a series of activities">
 
 			<div class="element-docs">
-				<p>The <code>ui-step</code> attribute corresponds to the Step
+				<p>The <code>ui-step</code> element/attribute corresponds to the Step
 					Semantic element.</p>
 			</div>
 
