--- a/src/modules/modules.html
+++ b/src/modules/modules.html
@@ -17,7 +17,7 @@
 			description="An accordion allows users to toggle the display of sections of content">
 
 			<div class="element-docs">
-				<p>The <code>ui-accordion</code> attribute corresponds to the Accordion Semantic element.</p>
+				<p>The <code>ui-accordion</code> element/attribute corresponds to the Accordion Semantic element.</p>
 			</div>
 
 			<div class="element-examples">
@@ -70,7 +70,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-checkbox</code> attribute corresponds to the Checkbox Semantic element.</p>	
+				<p>The <code>ui-checkbox</code> element/attribute corresponds to the Checkbox Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -79,7 +79,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-dimmer</code> attribute corresponds to the Dimmer Semantic element.</p>	
+				<p>The <code>ui-dimmer</code> element/attribute corresponds to the Dimmer Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -89,7 +89,7 @@
 			description="">
 
 			<div class="element-docs">
-				<p>The <code>ui-dropdown</code> attribute corresponds to the Dropdown
+				<p>The <code>ui-dropdown</code> element/attribute corresponds to the Dropdown
 					Semantic element.</p>
 
 				<h3 ui-header>To-Do List</h3>
@@ -179,7 +179,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-embed</code> attribute corresponds to the Embed Semantic element.</p>	
+				<p>The <code>ui-embed</code> element/attribute corresponds to the Embed Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -188,7 +188,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-modal</code> attribute corresponds to the Modal Semantic element.</p>	
+				<p>The <code>ui-modal</code> element/attribute corresponds to the Modal Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -197,7 +197,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-nag</code> attribute corresponds to the Nag Semantic element.</p>	
+				<p>The <code>ui-nag</code> element/attribute corresponds to the Nag Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -207,7 +207,7 @@
 			description="A popup displays additional information on top of a page">
 
 			<div class="element-docs">
-				<p>The <code>ui-popup</code> attribute corresponds to the Popup Semantic element.</p>	
+				<p>The <code>ui-popup</code> element/attribute corresponds to the Popup Semantic element.</p>	
 			</div>
 
 			<div class="element-examples">
@@ -266,7 +266,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-progress</code> attribute corresponds to the Progress Semantic element.</p>	
+				<p>The <code>ui-progress</code> element/attribute corresponds to the Progress Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -275,7 +275,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-rating</code> attribute corresponds to the Rating Semantic element.</p>	
+				<p>The <code>ui-rating</code> element/attribute corresponds to the Rating Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -284,7 +284,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-search</code> attribute corresponds to the Search Semantic element.</p>	
+				<p>The <code>ui-search</code> element/attribute corresponds to the Search Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -293,7 +293,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-shape</code> attribute corresponds to the Shape Semantic element.</p>	
+				<p>The <code>ui-shape</code> element/attribute corresponds to the Shape Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -303,7 +303,7 @@
 			description="">
 
 			<div class="element-docs">
-				<p>The <code>ui-sidebar</code> attribute corresponds to the Sidebar Semantic element.</p>	
+				<p>The <code>ui-sidebar</code> element/attribute corresponds to the Sidebar Semantic element.</p>	
 			</div>
 
 			<div class="element-examples">
@@ -355,7 +355,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-sticky</code> attribute corresponds to the Sticky Semantic element.</p>	
+				<p>The <code>ui-sticky</code> element/attribute corresponds to the Sticky Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -364,7 +364,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-tab</code> attribute corresponds to the Tab Semantic element.</p>	
+				<p>The <code>ui-tab</code> element/attribute corresponds to the Tab Semantic element.</p>	
 			</div>
 		</element-section>
 		
@@ -373,7 +373,7 @@
 			category="module"
 			description="">
 			<div class="element-docs">
-				<p>The <code>ui-transition</code> attribute corresponds to the Transition Semantic element.</p>	
+				<p>The <code>ui-transition</code> element/attribute corresponds to the Transition Semantic element.</p>	
 			</div>
 		</element-section>
 		
