--- a/src/modules/views.html
+++ b/src/modules/views.html
@@ -20,7 +20,7 @@
 			description="A card displays site content in a manner similar to a playing card">
 
 			<div class="element-docs">
-				<p>The <code>ui-card</code> attribute corresponds to the Card
+				<p>The <code>ui-card</code> element/attribute corresponds to the Card
 				Semantic element.</p>
 
 				<p>You can group <code>ui-card</code>s together using a block-level element
@@ -62,7 +62,7 @@
 			description="A statistic emphasizes the current value of an attribute">
 
 			<div class="element-docs">
-				<p>The <code>ui-statistic</code> attribute corresponds to the Statistic
+				<p>The <code>ui-statistic</code> element/attribute corresponds to the Statistic
 				Semantic element.</p>
 
 				<p>You can group <code>ui-statistic</code>s together using a block-level element
